fix: change stuff in GET and POST queries and refactor swagger
